--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,29 @@
-.App {
-  text-align: center;
+body{
+  
+}
+
+.titleBar {
+  background-color: #000;
+  display: block;
+  color: #fff;
+  padding-left: 16px
+}
+
+.App{
+  margin: 0px;
+  
+  padding: 0px;
+}
+
+.search{
+  font-size: 24px;
+  display: block;
+  position: relative;
+  min-width: auto;
+  max-width: 100%;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
 }
 
 .App-logo {
